# ngs-pipeline

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_web.sh  setup.py
config/: sample_config.yaml
data/: reference.fasta  reference.fasta.ann  reference.fasta.bwt  reference.fasta.fai  reference.fasta.pac  reference.fasta.sa  test.fastq
pipeline/: main.py
pipeline/stages/: align.py  annotate.py  qc.py  report.py  variant_call.py
pipeline/utils/: config.py  logger.py
pipeline/workflows/: full_pipeline.py
results/test_run/: aligned.bam  aligned.bam.bai  report.html
results/test_run/qc/: test_fastqc.html
tests/: test_config.py  test_integration.py  test_logger.py  test_qc.py
web/: README.md  __init__.py  app.py  requirements.txt
web/templates/: base.html  index.html  jobs.html  submit.html
