[project]
name = "ngs-pipeline"
version = "1.0.0"
description = "NGS Data Processing Pipeline"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.80",
    "click>=8.0.0",
    "levenshtein>=0.27.3",
    "pyyaml>=6.0.0",
    "streamlit>=1.35.0",
    "vcfpy>=0.14.2",
]
[tool.pycrucible]
entrypoint = "main.py"
